# custom-templates

./: README.md
python-basic/: cookiecutter.json
python-basic/hooks/: post_gen_project.py
python-basic/{{ cookiecutter.project_slug }}/: .gitignore  pyproject.toml
